--- a/keybr.com/style.css
+++ b/keybr.com/style.css
@@ -33,6 +33,12 @@ body {
     grid-template-rows: auto 1fr auto !important;
 }
 
+body > div {
+    visibility: hidden;
+    width: 0;
+    height: 0;
+}
+
 nav > div {
     display: flex;
     justify-content: center;
