Add missing backslash to metadata

--- a/styles/f1tv.formula1.com.user.css
+++ b/styles/f1tv.formula1.com.user.css
@@ -6,7 +6,7 @@
 @author         robin-pfeiffer
 @hompageURL     https://github.com/robin-pfeiffer/stylus-styles
 @updateURL      https://github.com/robin-pfeiffer/stylus-styles/raw/main/f1tv.formula1.com.user.css
-==UserStyle== */
+==/UserStyle== */
 
 main > div.container-xl:first-child,
 main > div.container-lg:first-child,
