--- a/styles/geekhack.org.user.css
+++ b/styles/geekhack.org.user.css
@@ -6,7 +6,7 @@
 @author         robin-pfeiffer
 @hompageURL     https://github.com/robin-pfeiffer/stylus-styles
 @updateURL      https://github.com/robin-pfeiffer/stylus-styles/raw/main/geekhack.org.user.css
-==UserStyle== */
+==/UserStyle== */
 
 @-moz-document domain("geekhack.org") {
     #header,
