Change rbn.dev to robinpfeiffer.nl

--- a/styles/f1tv.formula1.com.user.css
+++ b/styles/f1tv.formula1.com.user.css
@@ -1,9 +1,9 @@
 /* ==UserStyle==
 @name           f1tv-player
-@namespace      rbn.dev
+@namespace      robinpfeiffer.nl
 @version        2.0.0
 @description    Tweak to make the F1TV player full-width outside of fullscreen mode.
-@author         Robin Pfeiffer [contact@rbn.dev] (https://rbn.dev)
+@author         Robin Pfeiffer [contact@robinpfeiffer.nl] (https://www.robinpfeiffer.nl)
 @homepageURL    https://github.com/robin-pfeiffer/stylus-styles
 @supportURL     https://github.com/robin-pfeiffer/stylus-styles/issues
 @updateURL      https://github.com/robin-pfeiffer/stylus-styles/raw/main/styles/f1tv.formula1.com.user.css
