--- a/styles/postgresql.org.user.css
+++ b/styles/postgresql.org.user.css
@@ -1,9 +1,9 @@
 /* ==UserStyle==
 @name           postgresql
-@namespace      rbn.dev
+@namespace      robinpfeiffer.nl
 @version        1.0.0
 @description    Restrict content to 80 characters in width.
-@author         Robin Pfeiffer [contact@rbn.dev] (https://rbn.dev)
+@author         Robin Pfeiffer [contact@robinpfeiffer.nl] (https://www.robinpfeiffer.nl)
 @homepageURL    https://github.com/robin-pfeiffer/stylus-styles
 @supportURL     https://github.com/robin-pfeiffer/stylus-styles/issues
 @updateURL      https://github.com/robin-pfeiffer/stylus-styles/raw/main/styles/postgresql.org.user.css
