--- a/styles/nos.nl.user.css
+++ b/styles/nos.nl.user.css
@@ -1,9 +1,9 @@
 /* ==UserStyle==
 @name           nos-player
-@namespace      rbn.dev
+@namespace      robinpfeiffer.nl
 @version        1.1.1
 @description    Tweak to make player screen a little bit wider, moves title under the player window.
-@author         Robin Pfeiffer [contact@rbn.dev] (https://rbn.dev)
+@author         Robin Pfeiffer [contact@robinpfeiffer.nl] (https://www.robinpfeiffer.nl)
 @homepageURL    https://github.com/robin-pfeiffer/stylus-styles
 @supportURL     https://github.com/robin-pfeiffer/stylus-styles/issues
 @updateURL      https://github.com/robin-pfeiffer/stylus-styles/raw/main/styles/nos.nl.user.css
