--- a/styles/f1tv.formula1.com.user.css
+++ b/styles/f1tv.formula1.com.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           f1tv-player
 @namespace      robinpfeiffer.nl
-@version        2.1.0
+@version        2.2.0
 @description    Tweak to make the F1TV player full-width outside of fullscreen mode.
 @author         Robin Pfeiffer [contact@robinpfeiffer.nl] (https://www.robinpfeiffer.nl)
 @homepageURL    https://github.com/robin-pfeiffer/stylus-styles
@@ -21,7 +21,8 @@
       padding: 0;
 
       .inset-video-item-image-container {
-        height: 72.5vh;
+        /* Header is calculated dynamically, 122px seems to be the default for desktop (65px for mobile). */
+        height: calc(90vh - 122px);
 
         .inset-video-item-play-action-container,
         img.inset-video-item-image.img-loaded {
