--- a/styles/f1tv.formula1.com.user.css
+++ b/styles/f1tv.formula1.com.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           f1tv-player
 @namespace      robinpfeiffer.nl
-@version        2.3.0
+@version        2.3.1
 @description    Tweak to make the F1TV player full-width outside of fullscreen mode.
 @author         Robin Pfeiffer [contact@robinpfeiffer.nl] (https://www.robinpfeiffer.nl)
 @homepageURL    https://github.com/robin-pfeiffer/stylus-styles
@@ -11,7 +11,7 @@
 ==/UserStyle== */
 
 @-moz-document domain("f1tv.formula1.com") {
-  .navbar-nav > .nav-button > .btn-sparkle-outline {
+  .navbar-nav > .nav-button > .btn-spark-outline {
     display: none;
   }
 
